-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Replication
-
Fully Compatible
-
ALL
-
v8.1, v8.0, v7.0
-
Repl 2025-06-09
-
None
-
None
-
None
-
None
-
None
-
None
-
None
The OplogCapMaintainerThread deletes oplog with a method called reclaimOplog(), with global and RSTL locks held. This method can take a long time if there is a lot of oplog to reclaim, longer than 30 seconds, resulting in stepup or stepdown crashing due to not being able to obtain the RSTL.
Fix might be to make reclaimOplog() interruptible, or to take the global lock without the RSTL if this is safe, or both.
- is related to
-
SERVER-104856 Move oplog truncation/sampling/reclaiming code to replication
-
- Closed
-
- related to
-
SERVER-104441 Revisit decision to crash on RSTL timeout
-
- Closed
-