SERVER-104438: skip rstl in oplog maintainer thread (#36649)

GitOrigin-RevId: b835f602733093999ea180cde787acc8f334b687